--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 databricks-cli==0.17.3
-debugpy==1.6.3
+debugpy
 decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
