--- a/requirements.txt
+++ b/requirements.txt
@@ -1,227 +1,140 @@
-alembic==1.8.1
-altair==4.2.0
+altair==5.0.1
 ansi2html==1.8.0
-anyio==3.7.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.0.8
-async-lru==2.0.3
+asttokens==2.2.1
 attrs==23.1.0
-Babel==2.12.1
 backcall==0.2.0
-beautifulsoup4==4.12.2
-black==23.7.0
-bleach==6.0.0
-blinker==1.5
-Boruta==0.3
+blinker==1.6.2
 cachetools==5.3.1
 category-encoders==2.6.1
 certifi==2023.7.22
-cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.6
 cloudpickle==2.2.1
-colorlover==0.3.0
 comm==0.1.3
-commonmark==0.9.1
 contourpy==1.1.0
-cufflinks==0.17.3
 cycler==0.11.0
 Cython==3.0.0
+dacite==1.8.1
 dash==2.11.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-databricks-cli==0.17.3
-debugpy
 decorator==5.1.1
-defusedxml==0.7.1
 Deprecated==1.2.14
 deprecation==2.1.0
-docker==6.0.0
-entrypoints==0.4
-exceptiongroup==1.1.2
-executing==1.1.1
+executing==1.2.0
 fastjsonschema==2.18.0
 Flask==2.2.5
 fonttools==4.41.1
-fqdn==1.5.1
-funcy==1.17
-future==0.18.3
-gensim==4.3.1
-gitdb==4.0.9
-GitPython==3.1.29
-greenlet==2.0.2
-gunicorn==20.1.0
+gitdb==4.0.10
+GitPython==3.1.32
 htmlmin==0.1.12
 idna==3.4
 ImageHash==4.3.1
 imbalanced-learn==0.11.0
-importlib-metadata==5.2.0
-ipykernel==6.25.0
+importlib-metadata==6.8.0
 ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.7
-isoduration==20.11.0
+ipywidgets==8.1.0
 itsdangerous==2.1.2
-jedi==0.18.2
+jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.1
-json5==0.9.14
-jsonpointer==2.4
 jsonschema==4.18.4
 jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter_client==7.4.4
-jupyter_core==4.11.2
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-jupyterlab_server==2.24.0
+jupyter_core==5.3.1
+jupyterlab-widgets==3.0.8
 kaleido==0.2.1
 kiwisolver==1.4.4
-kmodes==0.12.2
-lightgbm==3.3.3
+lightgbm==4.0.0
 llvmlite==0.40.1
-Mako==1.2.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib==3.5.3
+matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
-missingno==0.5.1
-mistune==3.0.1
-mlflow==1.30.0
-mlxtend==0.19.0
-multimethod==1.9
-mypy-extensions==1.0.0
-nbclient==0.8.0
-nbconvert==7.7.3
-nbformat==5.9.1
-nest-asyncio==1.5.6
+multimethod==1.9.1
+nbformat==5.9.2
+nest-asyncio==1.5.7
 networkx==3.1
-nltk==3.8.1
-notebook==7.0.0
-notebook_shim==0.2.3
 numba==0.57.1
-numexpr==2.8.4
 numpy==1.23.5
-oauthlib==3.2.2
 orjson==3.9.2
-overrides==7.3.1
 packaging==23.1
 pandas==1.5.3
-pandas-profiling==3.4.0
-pandocfilters==1.5.0
+pandas-profiling==3.6.6
 parso==0.8.3
-pathspec==0.11.2
 patsy==0.5.3
 pexpect==4.8.0
-phik==0.12.2
+phik==0.12.3
 pickleshare==0.7.5
 Pillow==9.5.0
-plac==1.1.3
-platformdirs==3.9.1
-plotly==5.10.0
+platformdirs==3.10.0
+plotly==5.15.0
 plotly-resampler==0.9.1
 pmdarima==2.0.3
-prometheus-client==0.17.1
-prometheus-flask-exporter==0.20.3
 prompt-toolkit==3.0.39
-protobuf==3.20.3
+protobuf==4.23.4
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==9.0.0
+pyarrow==12.0.1
 pycaret==3.0.4
-pycparser==2.21
 pydantic==1.10.12
-pydeck==0.8.0b4
+pydeck==0.8.0
 Pygments==2.15.1
-PyJWT==2.6.0
-pyLDAvis==3.3.1
 Pympler==1.0.1
-pynndescent==0.5.7
 pyod==1.1.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2022.7.1
+pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
 PyYAML==6.0.1
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
-querystring-parser==1.2.4
 referencing==0.30.0
-regex==2022.9.13
-requests==2.28.2
+requests==2.31.0
 retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==12.6.0
+rich==13.5.1
 rpds-py==0.9.2
 schemdraw==0.15
 scikit-base==0.5.0
 scikit-learn==1.2.2
 scikit-plot==0.3.7
-scipy==1.9.3
+scipy==1.11.1
 seaborn==0.12.2
-semver==2.13.0
-Send2Trash==1.8.2
 six==1.16.0
+sklearn==0.0.post7
 sktime==0.21.0
-smart-open==6.3.0
 smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4.1
-SQLAlchemy==1.4.49
-sqlparse==0.4.4
-stack-data==0.5.1
-statsmodels==0.13.5
-streamlit==1.13.0
+stack-data==0.6.2
+statsmodels==0.14.0
+streamlit==1.25.0
 streamlit-pandas-profiling==0.1.3
-tabulate==0.9.0
 tangled-up-in-unicode==0.2.0
 tbats==1.1.3
-tenacity==8.1.0
-terminado==0.17.1
-textblob==0.17.1
+tenacity==8.2.2
 threadpoolctl==3.2.0
-tinycss2==1.2.1
 toml==0.10.2
-tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.2
-tqdm==4.64.1
+tqdm==4.65.0
 trace-updater==0.0.9.1
 traitlets==5.9.0
 tsdownsample==0.1.2
+typeguard==2.13.3
 typing_extensions==4.7.1
-tzdata==2022.5
-tzlocal==4.2
-umap-learn==0.5.3
-uri-template==1.3.0
-urllib3==1.26.16
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==2.0.4
 validators==0.20.0
 visions==0.7.5
 watchdog==3.0.0
 wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.4.1
 Werkzeug==2.2.3
 widgetsnbextension==4.0.8
+wordcloud==1.9.2
 wrapt==1.15.0
 wurlitzer==3.0.3
-xgboost==1.7.6
-xxhash==3.2.0
+xxhash==3.3.0
+ydata-profiling==4.4.0
 yellowbrick==1.5
 zipp==3.16.2
