--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ ansi2html==1.8.0
 asttokens==2.2.1
 attrs==23.1.0
 backcall==0.2.0
+black==23.7.0
 blinker==1.6.2
 cachetools==5.3.1
 category-encoders==2.6.1
@@ -53,6 +54,7 @@ matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 multimethod==1.9.1
+mypy-extensions==1.0.0
 nbformat==5.9.2
 nest-asyncio==1.5.7
 networkx==3.1
@@ -63,6 +65,7 @@ packaging==23.1
 pandas==1.5.3
 pandas-profiling==3.6.6
 parso==0.8.3
+pathspec==0.11.2
 patsy==0.5.3
 pexpect==4.8.0
 phik==0.12.3
@@ -113,6 +116,7 @@ tbats==1.1.3
 tenacity==8.2.2
 threadpoolctl==3.2.0
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.2
 tqdm==4.65.0
